<resources>
	<string name="app_name">My Music Player</string>
	<string name="album_cover">Album Cover</string>
	<string name="end">End</string>
	<string name="shuffle">Shuffle</string>
	<string name="play_pause">play_pause</string>
	<string name="previous">previous</string>
	<string name="next">next</string>
	<string name="fast_forward">fast_forward</string>
	<string name="rewind">rewind</string>
	<string name="separator">separator</string>
	<string name="edit">Edit album cover</string>
	<string name="properties">Properties</string>
	<string name="find_album_cover">Find album cover</string>
	<string name="songs">Songs</string>
	<string name="albums">Albums</string>
	<string name="album">Album</string>
	<string name="tracks">tracks</string>
	<string name="artist_cover">Artist cover</string>
	<string name="year">Year</string>
	<string name="total_length">Total length</string>
	<string name="image_picker_chooser">Choose an image picker</string>
	<string name="save_info">Save</string>
	<string name="cancel">Cancel</string>
	<string name="title">Title</string>
	<string name="title_hint">Add a song title here</string>
	<string name="year_hint">Add year here</string>
	<string name="album_hint">Add album title here</string>
	<string name="no_connection">Connection disabled</string>
	<string name="result">Result</string>
	<string name="bad_result">It seems that we were unable to find your album cover. To increase the chances to find your album cover please check that the song info are corrects (you can edit them in properties)</string>
	<string name="downloading">Downloading album cover</string>
	<string name="you_clicked">"You Clicked : "</string>
</resources>
