<?xml version="1.0" encoding="utf-8"?>
<!--- Attention pour que les changements visuels d'un fichier xml prennent effet
il faut: Run->Clean and Rerun -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bg_color_notif"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/notif_album_art"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/album_cover"
            android:layout_weight="0"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/vertical_separator"
            android:contentDescription="@string/separator"/>

        <LinearLayout
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation = "vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5">

                <TextView
                    android:id="@+id/notif_title"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/notif_album"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/notif_artist"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/song_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/RLAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_weight="0">

            <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_previous"
                android:contentDescription="@string/previous"/>

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/previous_button"
                android:layout_toEndOf="@id/previous_button"
                android:src="@android:drawable/ic_media_pause"
                android:contentDescription="@string/play_pause"/>

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/play_pause"
                android:layout_toEndOf="@id/play_pause"
                android:src="@android:drawable/ic_media_next"
                android:contentDescription="@string/next"/>

        </RelativeLayout>
    </LinearLayout>
