<?xml version="1.0" encoding="utf-8"?>
<!--- Attention pour que les changements visuels d'une notification prennent effet
il faut débrancher et rebrancher le téléphone -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/bg_color_notif" >

    <LinearLayout
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/notif_album_art"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/album_cover" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300px"
            android:src="@drawable/vertical_separator"
            android:contentDescription="@string/separator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation = "vertical" >

            <LinearLayout
                android:id="@+id/li_lay_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:layout_weight="0.96">

                <TextView
                    android:id="@+id/notif_title"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:gravity="start"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/notif_album"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/notif_artist"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/song_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomProgressBar"
                    android:layout_margin="5dip"/>

                <TextView
                    android:id="@+id/current_time"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_marginTop="3dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"/>

                <TextView
                    android:id="@+id/total_time"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/progressBar_notif"
                    android:layout_alignEnd="@+id/progressBar_notif"
                    android:textSize="10sp"
                    android:layout_marginTop="3dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginEnd="5dip"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/horizontal_separator"
        android:contentDescription="@string/separator"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <ImageButton
            android:id="@+id/rewind_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@android:drawable/ic_media_rew"
            android:contentDescription="@string/rewind"/>

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/rewind_button"
            android:layout_toEndOf="@+id/rewind_button"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/previous"/>

        <ImageButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/previous_button"
            android:layout_toEndOf="@id/previous_button"
            android:src="@android:drawable/ic_media_pause"
            android:contentDescription="@string/play_pause"/>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/play_pause"
            android:layout_toEndOf="@id/play_pause"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/next"/>

        <ImageButton
            android:id="@+id/fast_forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/next_button"
            android:layout_toEndOf="@id/next_button"
            android:src="@android:drawable/ic_media_ff"
            android:contentDescription="@string/fast_forward"/>

    </RelativeLayout>

</LinearLayout>